# phosphor-bmc-code-mgmt

./: .secrets.baseline  Makefile.am  README.md  activation.cpp  activation.hpp  configure.ac  gen-bios-tar  gen-lids-image-tar  image_manager.cpp  image_manager.hpp  image_verify.cpp  image_verify.hpp  item_updater.cpp  item_updater.hpp  lid.cpp  lid.hpp  meson.build  meson.options  meson_options.txt  msl_verify.cpp  msl_verify.hpp  obmc-flash-bmc  serialize.cpp  serialize.hpp  software.conf  software_manager_tool.cpp  sync_watch.cpp  uak_verify.cpp  uak_verify.hpp  utils.cpp  utils.hpp  watch.cpp
bios/: bios_software_manager.cpp  bios_software_manager.hpp  meson.build  spi_device.cpp  spi_device.hpp
bmc/: activation.cpp  activation.hpp  assemble-lids.service.in  code_updater_manager.cpp  code_updater_manager.hpp  image_manager.cpp  item_updater.cpp  item_updater.hpp  item_updater_helper.hpp  lid.cpp  lid.hpp  meson.build  msl_verify.cpp  msl_verify.hpp  obmc-flash-bmc  software_manager_tool.cpp  software_utils.cpp  uak_verify.cpp  uak_verify.hpp  utils.cpp  utils.hpp
common/: meson.build
cpld/: cpld.cpp  cpld.hpp  cpld_software_manager.cpp  cpld_software_manager.hpp  meson.build
eeprom-device/: eeprom_device.cpp  eeprom_device.hpp  eeprom_device_software_manager.cpp  eeprom_device_software_manager.hpp  eeprom_device_version.hpp  meson.build
i2c-vr/: i2cvr_device.cpp  i2cvr_device.hpp  i2cvr_software_manager.cpp  i2cvr_software_manager.hpp  meson.build
mmc/: Makefile.am.include  flash.cpp  item_updater_helper.cpp  (+2 more)
test/common/events/: events.cpp  meson.build
(+81 files in other folders)
